--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 </head>
 <body>
     <header>
-        <div class="top-header">
+        <div class="right-header">
             <h1 class="logo">Header Logo</h1>
+            <div class="bottom-text">
+                <h2>This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
+                <button>Sign Up</button>
+            </div> 
+        </div>
+
+        <div class="left-header">
             <ul>
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
-        </div>
-        <div class="bottom-header">
-            <div class="bottom-text">
-                <h2>This website is awesome</h2>
-                <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign Up</button>
-            </div>
             <div class="image-container">
                 This is a place holder for an image
                 <img src="#" alt="">
