--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Landing Page</title>
     <link rel="stylesheet" href="styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 <body>
     <header>
@@ -20,7 +21,7 @@
             <div class="bottom-text">
                 <h2>This website is awesome</h2>
                 <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</p>
-                <button>Sign Up</button>
+                <button>Sign up</button>
             </div>
             <div class="image-container">
                 This is a place holder for an image
