--- a/index.html
+++ b/index.html
@@ -32,21 +32,23 @@
 
     <div class="info">
         <h2>Some random information.</h2>
-        <div>
-            <div><img src="#" alt=""></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div><img src="#" alt=""></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div><img src="#" alt=""></div>
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div>
-            <div><img src="#" alt=""></div>
-            <p>this is some subtext under an illustration or image</p>
+        <div class="image-cards">
+            <div class="card">
+                <div><img src="#" alt=""></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div><img src="#" alt=""></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div><img src="#" alt=""></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div><img src="#" alt=""></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
         </div>
     </div>
 
