put background color on call to action prompt

--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
     </div>
 
     <div class="sign-up-prompt">
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+        <div class="prompt">
+            <div class="prompt-text">
+                <p>Call to action! It's time!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
     </div>
 
     <footer>Copyright &copy The Odin Project 2021</footer>
