--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <div class="sign-up-prompt">
         <div class="prompt">
             <div class="prompt-text">
-                <p>Call to action! It's time!</p>
+                <p class="action-call">Call to action! It's time!</p>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
             <button>Sign up</button>
