Add images to webpage and inlcude image author credit in README

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <button>Sign up</button>
             </div>
             <div class="image-container">
-                This is a place holder for an image
-                <img src="#" alt="">
+                <!--This is a placeholder for an image-->
+                <img src="images/pexels-hikaique-65438.jpg" alt="A Building">
             </div>
         </div>
     </header>
@@ -34,19 +34,19 @@
         <h2>Some random information.</h2>
         <div class="image-cards">
             <div class="card">
-                <div><img src="#" alt=""></div>
+                <div><img src="images/pexels-kindelmedia-8566525.jpg" alt="a robot"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <div><img src="#" alt=""></div>
+                <div><img src="images/pexels-pixabay-372166.jpg" alt="a bunny"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <div><img src="#" alt=""></div>
+                <div><img src="images/pexels-darya-grey_owl-132130036-11701477.jpg" alt="alien balloons"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
             <div class="card">
-                <div><img src="#" alt=""></div>
+                <div><img src="images/pexels-mayday-1545743.jpg" alt="a car"></div>
                 <p>this is some subtext under an illustration or image</p>
             </div>
         </div>
